Fix markdown headers - Fix line spacing - Fix new line parsing

--- a/char-sheet/src/styles/markdown.scss
+++ b/char-sheet/src/styles/markdown.scss
@@ -1,5 +1,7 @@
 
 .markdown {
+  white-space: normal;
+
   html {
     font-size: 16px;
     line-height: 1.5;
@@ -22,17 +24,17 @@
     margin-top: 0;
     margin-bottom: 0.5em;
     font-weight: 700;
-    line-height: 1.2;
+    line-height: 1;
     color: inherit;
     text-wrap: balance;
   }
 
-  h1 { font-size: 2.25rem;  /* 36px */ }
-  h2 { font-size: 1.875rem; /* 30px */ }
-  h3 { font-size: 1.5rem;   /* 24px */ }
-  h4 { font-size: 1.25rem;  /* 20px */ }
-  h5 { font-size: 1.125rem; /* 18px */ }
-  h6 { font-size: 1rem;     /* 16px */ }
+  h1 { font-size: 1.5rem;  /* 24px */ }
+  h2 { font-size: 1.25rem; /* 20px */ }
+  h3 { font-size: 1.125rem;   /* 18px */ }
+  h4 { font-size: 1rem;  /* 16px */ }
+  h5 { font-size: 0.875rem; /* 14px */ }
+  h6 { font-size: 0.75rem;     /* 12px */ }
 
   /* --------------------------------------------------------
     Paragraphs & body copy
@@ -40,7 +42,7 @@
   p {
     margin-top: 0;
     margin-bottom: 1em;
-    line-height: 1.625;
+    line-height: 1;
   }
 
   /* --------------------------------------------------------
@@ -71,7 +73,7 @@
 
   li {
     margin-bottom: 0.25em;
-    line-height: 1.625;
+    line-height: 1;
   }
 
   li > ul,
